<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#242424">

    <LinearLayout
        android:id="@+id/headerTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#242424">

        <Button
            android:id="@+id/backButton"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/donation_dialog_button_back"
            android:layout_margin="4dp"
            android:background="@drawable/krita_gray_button"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/headerText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/donation_dialog_header_support"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textColor="#ffffff" />
    </LinearLayout>

    <Button
        android:id="@+id/headerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/krita_pink_button"
        android:text="@string/donation_dialog_header_button"
        android:textColor="#ffffff" />

    <View
        android:id="@+id/topDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <FrameLayout
        android:id="@+id/splashLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/splashImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/splashText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|top"
            android:paddingTop="6dp"
            android:paddingRight="6dp"
            android:textColor="#ffffff"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="4.0" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/productScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#242424">

        <LinearLayout
            android:id="@+id/productList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#242424">

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/supporterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/donation_dialog_supporter_text"
        android:textColor="#ffffff" />

    <View
        android:id="@+id/bottomDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <ViewAnimator
        android:id="@+id/bottomViews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#242424">

        <Button
            android:id="@+id/dismissButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/donation_dialog_button_close"
            android:layout_margin="4dp"
            android:background="@drawable/krita_gray_button"
            android:textColor="#ffffff" />

        <LinearLayout
            android:id="@+id/loadingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#242424">

            <ProgressBar
                android:id="@+id/loadingSpinner"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/loadingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/donation_dialog_loading"
                android:textColor="#ffffff" />

        </LinearLayout>
    </ViewAnimator>

</LinearLayout>